<resources>
    <string name="app_name">Blurry</string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="text">Add Text</string>
    <string name="emoji">Add Emoji</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_background">Change Background</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
</resources>
